2006-11-25 Don Scorgie <DonScorgie@Blueyonder.co.uk>

    * src/Links.py:
    * src/MainWindow.py:
    Remove (incorrect) interpreter invocations
    These files shouldn't be called outside of
    labyrinth anyway (in normal circumstances)


2006-11-15 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/Links.py:
	Only try and calculate ends on loading
	if both parent and child exists (issue #34)

	* src/MapList.py:
	Don't calculate the number of nodes within a map
	It's not used and seems to cause problems with some maps
	( issue #36)

=========== V0.3 ===========
2006-11-13 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* configure.ac:
	* NEWS:
	Bump Version
	Prepare for 0.3 release

	* data/Makefile.am:
	Fix make distcheck (add uninstall rule)

	* doc/TheFuture:
	* README:
	Update for 0.3 release


2006-11-12 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/MMapArea.py:
	* src/labyrinth.py:
	* src/Browser.py:
	Fix thought numbers on loading.  Again.  Sigh (issue #32
	and previously issue #6)
	Fix loading of maps from the command line

	* src/MainWindow.py:
	Make export dialog work again (issue #29)

2006-11-08 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/utils.py:
	* src/TextThought.py:
	Use Tango palette colours, which are slightly
	less jarring, though feel somewhat strange ;)
	Text selection is still bright red
	Primary thought is "Butter"
	Selected thoughts are "Sky Blue"

	* src/MMapArea.py:
	Add an implicit "current_root" which acts as the
	anchor for new thoughts without being selected

	* src/MainWindow.py:
	Only set / change the mode with pygtk versions > 2.8
	as the function was apparently only introduced
	during 2.10

2006-11-07 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* data/labyrinth-ui.xml:
	* src/MainWindow.py:
	* src/MMapArea.py:
	Add "(Un)Link Thoughts" menu item
	which links or unlinks thoughts when
	2 (and only 2) thoughts are selected
	shortcut: ctrl-L (for want of a better one)

	* data/labyrinth.glade: